# shivvr

./: .gitignore  AUTH_PLAN.md  Cargo.toml  Dockerfile  Dockerfile.models  LICENSE  OPERATIONS.md  PLAN.md  README.md  REVIEW.md  REVIEW_UPDATE_2026-04-08.md  build.rs  cloudbuild-models.yaml  deploy.sh  docker-compose.yml  shivvr-spec-final.md  shivvr-v3-spec.md
scripts/: export_gtr_models.py  fetch_models.sh
src/: agent.rs  api.rs  auth.rs  chunker.rs  crypto.rs  embedder.rs  inverter.rs  lib.rs  main.rs  openai.rs  similarity.rs  store.rs  temp_store.rs
tests/: integration.rs
train-bge-inversion/: README.md  requirements.txt  run_full_training.sh
train-bge-inversion/scripts/: export_onnx_full.py  generate_bge_embeddings.py  generate_hypotheses.py  test_inversion.py  train_corrector_12gb.py  train_hypothesis.py  train_hypothesis_12gb.py
train-bge-inversion/vec2text_local/: __init__.py
training/: .gitignore  README.md  requirements-a100.txt  run_quick_test.sh  run_training_12gb.sh  run_training_a100.sh  test_mc_ablation.py  test_reconstruction_quality.py  test_stream_boundaries.py
training/scripts/: export_custom_onnx.py  export_onnx.py  export_onnx_full.py  export_t5_onnx.py  generate_bge_embeddings.py  generate_hypotheses.py  test_inversion.py  train_corrector.py  train_corrector_12gb.py  train_hypothesis_12gb.py
vector-smite/: Cargo.toml  README.md  WORD_WRAP_ARCHITECTURE.md
vector-smite/src/: main.rs
vectors-might/: Cargo.toml  fool_ai_stocks_bubble_2026-01-08.md  hn-frontpage.md  report-financial.md  vector_chunk_007.txt  velvet_glove_coup_full.md
(+18 files in other folders)
