[package]
name = "shivvr"
version = "0.1.0"
edition = "2021"

[features]
default = ["ml"]
ml = ["ort", "tokenizers", "simsimd"]
cuda = ["ort/cuda"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# ML Inference (optional — needed for embedder/inverter/chunker, not for core store/crypto)
ort = { version = "=2.0.0-rc.11", features = ["download-binaries", "tls-native", "ndarray"], optional = true }
tokenizers = { version = "0.21", optional = true }

# HTTP client (OpenAI API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Vector ops
simsimd = { version = "6.5.12", optional = true }
ndarray = "0.17"

# Storage
sled = "0.34"
bincode = "1.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

[package.metadata.dist]
dist = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
